feat: payment management link for contribute page

--- a/packages/frontend/src/app/pages/info-components/contribute/contribute.page.html
+++ b/packages/frontend/src/app/pages/info-components/contribute/contribute.page.html
@@ -141,6 +141,15 @@
     <br />
     <br />
 
+    <p>
+      <a
+        href="https://billing.stripe.com/p/login/dR6aFm6ex5vuauk8ww"
+        target="_blank"
+        rel="noopener noreferrer"
+        >{{ 'pages.contribute.manage' | translate }}</a
+      >
+    </p>
+
     <br />
   </div>
 </ion-content>
