RecipeSage-785 Drag and drop between categories working and persisting between shopping list lookups

--- a/packages/frontend/src/app/pages/shopping-list-components/shopping-list-popover/shopping-list-popover.page.html
+++ b/packages/frontend/src/app/pages/shopping-list-components/shopping-list-popover/shopping-list-popover.page.html
@@ -108,6 +108,21 @@
     {{ 'pages.shoppingListPopover.update' | translate }}
   </ion-button>
 
+  <ion-button
+    (click)="toggleEditMode()"
+    expand="block"
+    size="small"
+    class="ion-margin"
+  >
+    <ion-checkbox
+      slot="start"
+      [checked]="editMode"
+      disabled="true"
+      class="checkbox-icon"
+    ></ion-checkbox>
+    {{ 'pages.shoppingListPopover.edit' | translate }}
+  </ion-button>
+
   <ion-list-header>
     {{ 'pages.shoppingListPopover.dangerZone.title' | translate }}
   </ion-list-header>
