RS-785-all bugs out just the help on first try to go

--- a/packages/frontend/src/app/components/collapsable-category-component/collapsible-category.component.html
+++ b/packages/frontend/src/app/components/collapsable-category-component/collapsible-category.component.html
@@ -1,13 +1,11 @@
-<div class="category-container">
-  <ion-list-header (click)="onToggleCollapse()">
-    <ion-title class="ion-no-padding">
-      {{ categoryTitle }}
-      <ion-icon *ngIf="!isCollapsed" name="caret-down"></ion-icon>
-      <ion-icon *ngIf="isCollapsed" name="caret-up"></ion-icon>
-    </ion-title>
-  </ion-list-header>
+<ion-list-header (click)="onToggleCollapse()">
+  <ion-title class="ion-no-padding">
+    {{ categoryTitle }}
+    <ion-icon *ngIf="!isCollapsed" name="caret-down"></ion-icon>
+    <ion-icon *ngIf="isCollapsed" name="caret-up"></ion-icon>
+  </ion-title>
+</ion-list-header>
 
-  <div *ngIf="!isCollapsed">
-    <ng-content></ng-content>
-  </div>
+<div [class.collapsed-content]="isCollapsed">
+  <ng-content></ng-content>
 </div>
