feat: migrate stripe webhooks to typescript

--- a/packages/frontend/src/app/pages/info-components/contribute/contribute.page.html
+++ b/packages/frontend/src/app/pages/info-components/contribute/contribute.page.html
@@ -142,10 +142,7 @@
     <br />
 
     <p>
-      <a
-        href="https://billing.stripe.com/p/login/dR6aFm6ex5vuauk8ww"
-        target="_blank"
-        rel="noopener noreferrer"
+      <a [href]="billingPortalUrl" target="_blank" rel="noopener noreferrer"
         >{{ 'pages.contribute.manage' | translate }}</a
       >
     </p>
