feat: remove email returns throughout legacy API

--- a/packages/frontend/src/app/components/select-knownuser/select-knownuser.component.html
+++ b/packages/frontend/src/app/components/select-knownuser/select-knownuser.component.html
@@ -42,7 +42,9 @@
         <ion-radio labelPlacement="end" justify="start" [value]="thread">
           <div class="ion-radio-label">
             {{ thread.otherUser.name }}
-            <p>{{ thread.otherUser.email }}</p>
+            <p *ngIf="thread.otherUser.handle">
+              &commat;{{ thread.otherUser.handle }}
+            </p>
           </div>
         </ion-radio>
       </ion-item>
